--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,6 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   shared_preferences: ^2.2.0
-  
-  
  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +45,9 @@ dev_dependencies:
   sqflite_common_ffi: ^2.3.0
   test: ^1.22.0
   uuid: ^4.4.2
+  flutter_native_splash: ^2.4.0
+
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
